--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         </activity>
 
         <activity
-                android:name=".module.touch.TouchRegionActivity"
+                android:name="com.bihe0832.android.base.test.touch.TouchRegionActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/activityTheme">
@@ -51,25 +51,25 @@
         </activity>
 
         <activity
-                android:name=".module.request.TestHttpActivity"
+                android:name="com.bihe0832.android.base.test.request.TestHttpActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/activityTheme"></activity>
 
         <activity
-                android:name=".module.network.TestNetworkActivity"
+                android:name="com.bihe0832.android.base.test.network.TestNetworkActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/activityTheme"></activity>
 
         <activity
-                android:name=".module.card.TestListActivity"
+                android:name="com.bihe0832.android.base.test.card.TestListActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/activityTheme"></activity>
 
         <activity
-                android:name=".module.webview.TestWebviewActivity"
+                android:name="com.bihe0832.android.base.test.webview.TestWebviewActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/activityTheme"></activity>
