--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.3'
-        classpath "com.bihe0832.android:GradleDependenciesCheck:1.1.0"
+        classpath "com.bihe0832.android:GradleDependenciesCheck:1.1.1"
         classpath 'com.novoda:bintray-release:0.9.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
     }
@@ -59,12 +59,12 @@ allprojects {
 
 
 subprojects {
-//    apply plugin: 'com.bihe0832.gradleDependenciesCheck'
-//
-//    GradleDependenciesCheckConfig {
-//        showResultType = 1
-//        excludePackage = "com.android.support;org.jetbrains.kotlin;android.arch.lifecycle"
-//    }
+    apply plugin: 'com.bihe0832.gradleDependenciesCheck'
+
+    GradleDependenciesCheckConfig {
+        showResultType = 1
+        excludePackage = "com.android.support;org.jetbrains.kotlin;android.arch.lifecycle"
+    }
 
     afterEvaluate { Project subproject ->
         if (zixieIsDebug) println("subprojects afterEvaluate : " + subproject.name)
