--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "CommonTest"
+ext.mainProject = "APPTest"
 
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
@@ -16,7 +16,7 @@ ext.mainProject = "CommonTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "CommonTest"
+ext.developModule = "LibDownload"
 
 
 /**
@@ -36,7 +36,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "3.11.15"
+ext.moduleVersionName = "3.11.16"
 
 /************************************ 组件化开发常用配置 ************************************/
 
