--- a/RouterAnnotation/build.gradle
+++ b/RouterAnnotation/build.gradle
@@ -1,14 +1,18 @@
 apply plugin: 'java'
-apply plugin: 'com.novoda.bintray-release'
+apply plugin: 'maven'
+apply plugin: 'signing'
 
-//添加发布相关的配置
-publish {
-    artifactId = rootProject.zixieModuleInfo[project.name].get("artifactId")
-    repoName = rootProject.zixieRepoName
-    publishVersion = rootProject.zixieModuleInfo[project.name].get("version")
-    userOrg = rootProject.zixieUserOrg
-    groupId = rootProject.zixieGroupId
-    licences = rootProject.zixieLicences
-    desc = 'the router annotation for zixie'//项目描述
-    website = 'https://github.com/bihe0832/AndroidAppFactory'//项目对应网站
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+            repository(url: rootProject.zixieRepositoryURL) {
+                authentication(userName: getProperty("NEXUS_USERNAME") , password: getProperty("NEXUS_PASSWORD") )
+            }
+            pom.groupId = rootProject.zixieGroupId
+            pom.version = rootProject.zixieModuleInfo[project.name].get("version")
+            pom.artifactId = rootProject.zixieModuleInfo[project.name].get("artifactId")
+        }
+    }
 }
