--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,13 @@ buildscript {
     repositories {
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
-        maven { url "https://dl.bintray.com/bihe0832/android" }
+        maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         jcenter()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.3'
         classpath "com.bihe0832.android:GradleDependenciesCheck:1.1.1"
-        classpath 'com.novoda:bintray-release:0.9.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
     }
 }
@@ -27,7 +26,7 @@ allprojects {
     repositories {
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
-        maven { url "https://dl.bintray.com/bihe0832/android" }
+        maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         jcenter()
         flatDir {
             dirs './../libs/'
