--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "CommonSplash"
+ext.mainProject = "RouterCompiler"
 
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
@@ -15,7 +15,7 @@ ext.mainProject = "CommonSplash"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "CommonSplash"
+ext.developModule = "RouterCompiler"
 
 
 /**
@@ -35,7 +35,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "3.11.24"
+ext.moduleVersionName = "4.0.0"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -181,7 +181,7 @@ ext.moduleInfo = [
                 "apidependenciesList": []
         ],
         "RouterCompiler"            : [
-                "version"            : "3.7.9",
+                "version"            : "3.0.2",
                 "artifactId"         : "lib-router-compiler",
                 "apidependenciesList": [
                         'com.squareup:javapoet:1.8.0',
@@ -198,7 +198,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibAAF"                    : [
-                "version"            : "3.7.9",
+                "version"            : "3.0.1",
                 "artifactId"         : "lib-aaf-tools",
                 "apidependenciesList": [
                 ]
@@ -399,7 +399,7 @@ ext.moduleInfo = [
                 "version"            : "3.9.6",
                 "artifactId"         : "lib-refresh",
                 "apidependenciesList": [
-                        "com.github.ybq:Android-SpinKit:1.0.2",
+                        "com.github.ybq:Android-SpinKit:1.4.0",
                         "LibAdapter"
                 ]
         ],
@@ -468,7 +468,7 @@ ext.moduleInfo = [
                 ]
         ],
         "LibLifecycle"              : [
-                "version"            : "3.11.24",
+                "version"            : "3.0.1",
                 "artifactId"         : "lib-lifecycle",
                 "apidependenciesList": [
                         "android.arch.lifecycle:extensions:${project.android_arch_lifecycle_version}",
