--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
     repositories {
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
+        maven { url "https://repo1.maven.org/maven2" }
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1006/content/" }
         jcenter()
@@ -13,7 +14,7 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.3'
-        classpath "com.bihe0832.android:GradleDependenciesCheck:1.1.1"
+        classpath "com.bihe0832.android:GradleDependenciesCheck:4.1.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.71"
     }
 }
@@ -27,6 +28,7 @@ allprojects {
     repositories {
         maven { url "https://mirrors.tencent.com/nexus/repository/maven-public/" }
         maven { url "https://mirrors.tencent.com/repository/maven/thirdparty-snapshots/" }
+        maven { url "https://repo1.maven.org/maven2" }
         maven { url "https://s01.oss.sonatype.org/content/groups/public" }
         maven { url "https://s01.oss.sonatype.org/service/local/repositories/combihe0832android-1006/content/" }
         jcenter()
