--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "CommonPhotos"
+ext.mainProject = "APPTest"
 
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
@@ -15,7 +15,7 @@ ext.mainProject = "CommonPhotos"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "CommonPhotos"
+ext.developModule = "LibPermission,LibFileSelect,LibImmersive"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.1.5"
+ext.moduleVersionName = "4.2.0"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -66,7 +66,7 @@ ext.moduleInfo = [
                 "artifactId"             : "",
                 "apidependenciesList"    : [
                         "CommonPraise", "CommonFeedback", "CommonWebview", "CommonNetwork", "CommonSplash",
-                        "CommonPhotos",
+                        "CommonPhotos", "CommonFileSelect",
                         "Framework",
                         'com.squareup.okhttp3:okhttp:3.9.1',
                         'com.squareup.okhttp3:logging-interceptor:3.8.0',
@@ -162,7 +162,8 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibCustomView",
-                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission", "LibImmersive"
+                        "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission",
+                        "LibImmersive", "LibFileSelect"
                 ]
         ],
         "LibUtils"                  : [
@@ -324,7 +325,7 @@ ext.moduleInfo = [
         "LibInstall"                : [
                 "version"            : "4.1.0",
                 "artifactId"         : "lib-install",
-                "apidependenciesList": ["LibFile", "LibZip","LibAPK" ]
+                "apidependenciesList": ["LibFile", "LibZip", "LibAPK"]
         ],
         "LibText"                   : [
                 "version"            : "4.1.0",
@@ -488,6 +489,14 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "LibDeviceNetwork",
                         "com.android.support:appcompat-v7:${project.android_support_version}"
+                ]
+        ],
+        "LibFileSelect"             : [
+                "version"            : "4.1.0",
+                "artifactId"         : "lib-file-select",
+                "apidependenciesList": [
+                        "LibWebview", "LibFragmentation", "LibImmersive", "LibPermission", "LibTouchRegion"
+
                 ]
         ]
 ]
