--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "LibPermission,LibFileSelect,LibImmersive"
+ext.developModule = "LibPermission,LibFileSelect,LibImmersive,LibFile"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
