--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -6,7 +6,7 @@ def project = ext
  * 当前开发中，最终运行的主工程，多个用 "," 分隔
  * 当前如果全量填"APPTest"
  */
-ext.mainProject = "CommonPhotos"
+ext.mainProject = "APPTest"
 
 /**
  * 当前开发中，涉及到修改的工程（仅填写直接修改的即可，依赖他的会自动添加），多个用 "," 分隔。
@@ -15,7 +15,7 @@ ext.mainProject = "CommonPhotos"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework"
  *
  */
-ext.developModule = "CommonPhotos"
+ext.developModule = "LibFloatview"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.2.4"
+ext.moduleVersionName = "4.3.0"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -66,7 +66,7 @@ ext.moduleInfo = [
                 "artifactId"             : "",
                 "apidependenciesList"    : [
                         "CommonPraise", "CommonFeedback", "CommonWebview", "CommonNetwork", "CommonSplash",
-                        "CommonPhotos", "CommonFileSelect",
+                        "CommonPhotos", "CommonFileSelect", "CommonFloatview",
                         "Framework",
                         'com.squareup.okhttp3:okhttp:3.9.1',
                         'com.squareup.okhttp3:logging-interceptor:3.8.0',
@@ -131,6 +131,7 @@ ext.moduleInfo = [
                         ]
                 ]
         ],
+
         "CommonPraise"              : [
                 "version"            : "4.2.4",
                 "artifactId"         : "common-praise",
@@ -163,7 +164,7 @@ ext.moduleInfo = [
                         "LibCommonUIUtils", "LibFragmentation_swipeback", "LibFlycoTabLayout", "LibQRCode",
                         "LibAdapter", "LibRefresh", "LibToast", "LibDialog", "LibNotification", "LibCustomView",
                         "LibRecycleviewExt", "LibTouchRegion", "LibViewExt", "LibWebview", "LibPermission",
-                        "LibImmersive", "LibFileSelect"
+                        "LibImmersive", "LibFileSelect","LibFloatview"
                 ]
         ],
         "LibUtils"                  : [
@@ -497,6 +498,18 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "LibWebview", "LibFragmentation", "LibImmersive", "LibPermission", "LibTouchRegion"
 
+                ]
+        ],
+        "LibFloatview"              : [
+                "version"                : "4.2.4",
+                "artifactId"             : "lib-float-view",
+                "apidependenciesList"    : [
+                        "LibLog", "LibConfig","LibThread","LibOS","LibDialog","LibToast","LibPermission"
+                ],
+                "specialdependenciesList": [
+                        "kapt": [
+                                "RouterCompiler"
+                        ]
                 ]
         ]
 ]
