--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         package="com.bihe0832.android.test">
 
     <uses-permission android:name="android.permission.INSTALL_PACKAGES" />
@@ -9,8 +10,9 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
-            android:name="com.bihe0832.android.app.Application"
+            android:name="com.bihe0832.android.test.TestApplication"
             android:allowBackup="true"
+            tools:replace="android:name"
             android:icon="@mipmap/icon"
             android:label="@string/app_name"
             android:supportsRtl="true">
