--- a/BaseTest/src/main/AndroidManifest.xml
+++ b/BaseTest/src/main/AndroidManifest.xml
@@ -3,20 +3,40 @@
     package="com.bihe0832.android.base.test">
 
     <application
-        android:name="com.bihe0832.android.app.Application"
         android:allowBackup="true"
         android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:supportsRtl="true">
 
+
+        <provider
+                android:name="com.bihe0832.android.base.test.ipc.provider.MainBinderProvider"
+                android:authorities="${applicationId}.process_dispatcher_main" />
+
+        <provider
+                android:name="com.bihe0832.android.base.test.ipc.provider.TestBinderProvider"
+                android:authorities="${applicationId}.process_dispatcher_other"
+                android:process=":test"
+                />
+
         <activity
             android:name="com.bihe0832.android.base.test.touch.TouchRegionActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
             android:screenOrientation="portrait"
-            android:theme="@style/activityTheme">
+            android:theme="@style/activityTheme"/>
 
-        </activity>
+        <activity
+                android:name="com.bihe0832.android.base.test.ipc.TestIPCActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden|layoutDirection"
+                android:screenOrientation="portrait"
+                android:theme="@style/activityTheme" />
 
+        <activity
+                android:name="com.bihe0832.android.base.test.ipc.TestIPC1Activity"
+                android:configChanges="orientation|screenSize|keyboardHidden|layoutDirection"
+                android:screenOrientation="portrait"
+                android:process=":test"
+                android:theme="@style/activityTheme" />
 
         <activity
             android:name="com.bihe0832.android.base.test.request.TestHttpActivity"
