--- a/BaseTest/src/main/AndroidManifest.xml
+++ b/BaseTest/src/main/AndroidManifest.xml
@@ -50,6 +50,14 @@
             android:screenOrientation="portrait"
             android:theme="@style/activityTheme"></activity>
 
+
+        <activity
+                android:name="com.bihe0832.android.base.test.log.TestLogActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/activityTheme"></activity>
+
+
         <activity
             android:name="com.bihe0832.android.base.test.card.TestListActivity"
             android:configChanges="orientation|screenSize|keyboardHidden"
