--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
-            android:name="com.bihe0832.android.test.TestApplication"
+            android:name="com.bihe0832.android.base.test.TestApplication"
             android:allowBackup="true"
             tools:replace="android:name"
             android:icon="@mipmap/icon"
