关于我们及设置独立

--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:label="@string/app_name"
             android:supportsRtl="true">
         <activity
-                android:name=".TestSplashActivity"
+                android:name="com.bihe0832.android.test.TestSplashActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/fullscreenActivityTheme">
@@ -34,20 +34,12 @@
                 android:theme="@style/activityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-<!--                                <category android:name="android.intent.category.LAUNCHER" />-->
+                <!--                                <category android:name="android.intent.category.LAUNCHER" />-->
             </intent-filter>
         </activity>
 
         <activity
                 android:name="com.bihe0832.android.base.test.touch.TouchRegionActivity"
-                android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
-                android:theme="@style/activityTheme">
-
-        </activity>
-
-        <activity
-                android:name="com.bihe0832.android.app.about.AboutActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/activityTheme">
