--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibWebview"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.7.17"
+ext.moduleVersionName = "4.8.0"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -89,9 +89,15 @@ ext.moduleInfo = [
                 "artifactId"         : "common-wrapper",
                 "apidependenciesList": [
                         "CommonFeedback", "CommonWebview",
-                        "CommonSplash",
-                        "CommonPhotos",
-                        "CommonNetwork","CommonPraise",
+                        "CommonSplash", "CommonPhotos",
+                        "CommonNetwork","CommonPraise","CommonAbout"
+                ]
+        ],
+        "CommonAbout"              : [
+                "version"            : "4.7.17",
+                "artifactId"         : "common-about",
+                "apidependenciesList": [
+                        "Framework"
                 ]
         ],
         "CommonSplash"              : [
