--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibHttpCommon"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -272,7 +272,7 @@ ext.moduleInfo = [
         "LibHttpCommon"             : [
                 "version"            : "4.8.2",
                 "artifactId"         : "lib-http-common",
-                "apidependenciesList": ["LibThread", "LibLog"]
+                "apidependenciesList": ["LibThread", "LibLog","LibCommonUtils"]
         ],
         "LibHttpAdvanced"           : [
                 "version"            : "4.8.2",
