--- a/LibFloatview/src/main/AndroidManifest.xml
+++ b/LibFloatview/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.bihe0832.android.common.floatview"
+<manifest package="com.bihe0832.android.lib.floatview"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application>
