升级基础库，所有基础库都以360dp为基准重置，设置UI兼容性基准density

--- a/APPTest/src/main/AndroidManifest.xml
+++ b/APPTest/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
         <activity
                 android:name="com.bihe0832.android.test.TestMainActivity"
                 android:configChanges="orientation|screenSize|keyboardHidden"
-                android:screenOrientation="portrait"
+                android:screenOrientation="sensor"
                 android:theme="@style/activityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
