历史文件自动删除

--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibFile"
 
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
@@ -34,7 +34,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.12.0"
+ext.moduleVersionName = "4.12.1"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -332,7 +332,8 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "com.android.support:support-v4:${project.android_support_version}",
                         "LibEncrypt",
-                        "LibCommonUtils"
+                        "LibCommonUtils",
+                        "LibThread"
                 ]
         ],
         "LibZip"                    : [
